Remove warnings when mitigating to the latest Maven and JDK